# ACES

./: .env.sample  .gitignore  README.md  conftest.py  pyproject.toml  run.py
agent/src/: config.py  logger.py  shopper.py  typedefs.py
agent/src/core/: mllm.py  tools.py
agent/tests/: test_langchain_agent.py
common/: messages.py
config/experiment_metadata/: model_display_names.yaml  product_shortnames.yaml  rationality_suite_experiment_names.yaml
config/models/: bedrock-nova-lite-v1.yaml  claude-3.5-sonnet.yaml  claude-3.7-sonnet.yaml  claude-4-1-opus.yaml  claude-4-5-opus.yaml  claude-4-5-sonnet.yaml  claude-4-opus.yaml  claude-4-sonnet.yaml  gemini-2.0-flash.yaml  gemini-2.5-flash-preview.yaml  gemini-2.5-flash.yaml  gemini-2.5-pro.yaml  gemini-3-flash-preview.yaml  gemini-3-pro-preview.yaml  gpt-4.1.yaml  gpt-4o.yaml  gpt-5.1.yaml  gpt-5.2.yaml  gpt-5.yaml
experiments/: config.py  data_generation.py  data_loader.py  engine_loader.py  filesystem_environment.py  results.py
experiments/analysis/: choice_model.py  choice_model_headless.py  cli.py  common.py  market_share.py  rationality.py
experiments/analysis/tests/: test_choice_model.py  test_common.py  test_market_share.py  test_rationality.py
experiments/runners/: __init__.py  simple_runtime.py
experiments/tests/: test_batch_operations_retry_validation.py  test_engine_loader.py  test_parallel_screenshot_conflicts.py
experiments/utils/: dataset_ops.py  journey_iterator.py  screenshot_collector.py
sandbox/: app.py
sandbox/src/: state.py
tests/runners/: test_screenshot_runtime.py
(+97 files in other folders)
